@@ -1,6 +1,8 @@
 Changes in version 0.1.2.3-alpha - 2006-10-??
   o Minor features, controller:
-    - Add a REASON field to CIRC events. (Patch from Mike Perry)
+    - Add a REASON field to CIRC events; for backward compatibility, this
+      field is sent only to controllers that have enabled the extended
+      event format. (Patch from Mike Perry)
 
   o Minor bugfixes:
     - Change NT service functions to be loaded on demand.  This lets us
